tests/specs/ecosystem/poolifier/poolifier_web_worker/0_3_13.test
poolifier/poolifier-web-worker/0.3.13
-- deno.lock --
{
  "version": "3",
  "remote": {}
}

===

== FAST CHECK EMIT FAILED ==
error[missing-explicit-return-type]: missing explicit return type in the public API
    --> /src/pools/abstract-pool.ts:1664:22
     | 
1664 |   protected readonly workerMessageListener = (
     |                      ^^^^^^^^^^^^^^^^^^^^^ this function is missing an explicit return type
     = hint: add an explicit return type of 'void' or 'never' to the function

  info: all functions in the public API must have an explicit return type
  info: function expressions without a return statement can have a return type of either 'void' or 'never'
  info: this function has no return statements, so a return type could not be inferred automatically
  docs: https://jsr.io/go/slow-type-missing-explicit-return-type


